src/index.css
@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&display=swap');

:root {
  --primary-color: #800000; 
  --background-color1: #E5E5E5; 
  --background-color2: #fff;
  --text-color1: #333; 
  --text-corlor2: #fff;
}

* {
  margin: 0;
  font-family: "Mulish", sans-serif;
}

body {
  background-color: var(--background-color1);
  color: var(--text-color1);
  font-size: 20px;
}

.main {
  margin-top: 30px;
}

/* Navbar */
.navbar {
  display: flex;
  margin-top: 56px;
  background-color: var(--primary-color);
  height: 56px;
}

.navbar div {
  width: 33.333%;
  text-align: center;
  line-height: 56px;
}

.navbar a {
  display: inline-block;
  width: 100%;
  color: var(--text-corlor2);
  text-decoration: none;
}

.navbar div.active {
  position: relative;
}

.navbar div.active::after {
  content: '';
  position: absolute;
  left: 0;
  bottom: -3px; 
  width: 100%;
  height: 3px; 
  background-color: var(--background-color2); 
}

/* Home page */
.title {
  background-color: var(--primary-color);
  color: var(--text-corlor2);
  height: 45px;
  width: 150px;
  box-sizing: border-box;
  padding: 10px 12px;
  border-radius: 5px;
  margin: 30px 20px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  -o-border-radius: 5px;
}

.buttons {
  display: flex;
  justify-content: center;
}

.buttons button {
  font-size: 20px;
  height: 45px;
  width: 150px;
  margin: 10px;
  border-radius: 50px;
  color: var(--primary-color);
  background-color: var(--background-color2);
  border: 1px solid var(--primary-color);
  -webkit-border-radius: 50px;
  -moz-border-radius: 50px;
  -ms-border-radius: 50px;
  -o-border-radius: 50px;
}

.buttons button.active {
  background-color: var(--primary-color);
  color: var(--text-corlor2);
}

.menu-name {
  font-weight: bold;
  color: var(--primary-color);
  margin: 12px auto;
  text-align: center;
}

.dish {
  background-color: var(--background-color2);
  box-sizing: border-box;
  border-radius: 5px;
  width: 350px;
  height: 100px;
  padding: 10px;
  margin: 10px auto;
}

/* Login and Register */
.flexcenter {
  display: flex;
  justify-content: center;
}

.flexcol {
  display: flex;
  flex-direction: column;
}

.grid {
  display: grid;
  grid-template-columns: auto auto;
}

button {
  background-color: var(--primary-color);
  width: 80vw;
  height: 65px;
  border-radius: 32px;
  border: none;
  color: white;
}

input[type="text"] {
  width: 80vw;
  height: 63px;
  background-color: #F5F4F2;
  border-radius: 32px;
  border: none;
  margin-bottom: 20px;
  color: #241C1C;
  font-size: 18px;
}

.roselogo {
  width: 55px;
}

footmsg {
  font-size: 11x;
  margin-bottom: 10px;
}

a {
  color: #800000;
  text-decoration: bold;
}

.flexcenter > h1 {
  margin-bottom: 40px;
}

.padtop {
  margin-top: 15vh;
}

/* Search */
.main form {
  margin-top: 30px;
}

.search-container {
  display: flex;
  justify-content: center;
}

.search-container .search-input {
  width: 80%;
  height: 30px;
  margin-right: 5px;
  box-sizing: border-box;
  padding: 10px;
  border-radius: 10px;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  -o-border-radius: 10px;
}

.search-container .search-input:focus {
  outline: none;
  border: 1px solid var(--primary-color);
}

.search-container .search-button {
  width: 15%;
  height: 30px;
  border-radius: 5px;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  -ms-border-radius: 15px;
  -o-border-radius: 15px;
  cursor: pointer;
}


/* Review */

.reviewcomp {
  background-color: white;
  border-radius: 15px;
  width: 90vw;
  padding-top: 15px;
  padding-left: 15px;
  padding-right: 15px;
  padding-bottom: 15px;
}

.star {
  font-size: 30px;
  color: var(--primary-color);
}

/* AddReview */

.star-gray {
  font-size: 100px;
}

.star-red{
  font-size: 100px;
  color: var(--primary-color);
}


.textbox {
  width: 70vw;
  height: 50vh;

}

